--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "axios": "^0.21.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.34.1"
+    "react-icons": "^4.2.0",
+    "sass": "^1.34.1",
+    "sweetalert": "^2.1.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/node": "^15.12.1",
